--- a/WpfAppCommunityMVVM/App.xaml
+++ b/WpfAppCommunityMVVM/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WpfAppCommunityMVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfAppCommunityMVVM"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfAppCommunityMVVM">
     <Application.Resources>
          
     </Application.Resources>
